# rust-tree3

./: .gitignore  BACKLOG.md  CHANGELOG.md  Cargo.toml  DISTRIB.md  README.md  build.rs
docs/: TREE3_spec.md  TREE3_spec2.md
kernels/: sweep.cu  sweep_fp.ptx
scripts/: rebuild.cmd  run_basic.cmd  run_exhausted.cmd  run_large.cmd  run_medium.cmd  run_optimal_medium.cmd  run_optimal_small.cmd  run_optimal_tree2.cmd  run_random.cmd  run_random_seed.cmd  run_smallest_strategy.cmd  run_tree1.cmd  run_tree2.cmd
src/: canonical.rs  cli.rs  embedding.rs  fingerprint.rs  generator.rs  gpu_sweep.rs  main.rs  memlock.rs  svg_render.rs  tests.rs  tree.rs
