[package]
name = "tree3"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tree3"
path = "src/main.rs"

[features]
cuda = ["dep:cudarc"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
cudarc = { version = "0.19", optional = true, features = ["cuda-12060", "nvrtc"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
